# thin_trait_object

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
src/tests/: api_experiments.rs
tests/compile_fail/: enforce_send.rs  enforce_send.stderr  use_after_free.rs  use_after_free.stderr
